public/css/landing/style.css
/* ... */
/* Hero Section end */

/* Nightwatch Feature section start */
.features {
  margin-bottom: 160px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 65px;
  max-width: min(var(--layout-content-width), 90%);
  width: 100%;
  position: relative;
}

.features__heading {
  color: var(--text-color);
  font-size: var(--font-size-h2);
  font-weight: 700;
  line-height: var(--line-height-h2);
  padding-bottom: 72px;
  text-align: center;
}

.features__heading--highlight {
  color: var(--text-color-accent);
}

.features__heading--highlight::before {
  content: ' ';
}

.features__content {
  display: flex;
  gap: 168px;
}

.features__content--reverse {
  flex-direction: row-reverse;
}

.features__content:not(:last-child) {
  margin-bottom: 119px;
}

.features__content-wrapper {
  display: flex;
  flex-direction: column;
  flex: 1 1 0%;
  gap: 24px;
}

.features__content-wrapper-heading {
  color: var(--text-color);
  font-family: var(--font-family-code);
  font-size: var(--font-size-h4);
  font-weight: 700;
  line-height: var(--line-height-h4);
  padding: 10px 0;
}

.features__content-wrapper-heading::before {
  content: '>';
  color: var(--text-color-accent);
  font-family: var(--font-family-code);
  padding-right: 22px;
}

.features__content-wrapper-description {
  display: flex;
  flex-direction: column;
  gap: 13px;
}

.features__content-wrapper-description-title {
  color: var(--feature-title-text-color);
  font-size: var(--font-size-h6);
  font-weight: 500;
  line-height: var(--line-height-h6);
}

.features__content-wrapper-description-list {
  color: var(--text-color);
  display: flex;
  font-weight: 600;
  flex-direction: column;
  font-size: var(--font-size-h7);
  line-height: var(--line-height-h7-s);
}

.features__content-wrapper-description-list-item {
  color: var(--card-text-color);
}

.features__content-wrapper-description-list-item::marker {
  color: var(--text-color);
}

.features__content-wrapper-description-list-item:not(:last-child) {
  margin-bottom: calc(var(--font-size-h5) / 2);
}

.features__content-wrapper-description-list-item>strong {
  font-weight: 700;
  color: var(--text-color);
}

.features__content-wrapper-description-list-item>strong::after {
  content: ': ';
}

.features__content-image {
  flex: 1 1 0%;
}

.features__path {
  position: absolute;
  height: 100%;
  overflow: hidden;
  top: 150px;
  left: 0;
  right: 0;
}

.features__path svg {
  height: 1471px;
  width: 100%;
}

.features__community-stats {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 40px;
  max-width: min(var(--layout-content-width), 90%);
  width: 100%;
  border: 5px solid var(--border-color);
  border-radius: 20px;
  padding: 40px 0;
  margin: auto;
}

.features__community-stats__text {
  color: var(--text-color);
  font-size: var(--font-size-h5);
  font-weight: 600;
  line-height: var(--line-height-h5);
}

.features__community-stats-container {
  display: flex;
  justify-content: space-between;
  width: 100%;
  max-width: 1000px;
}

.features__community-stats-wrapper {
  padding-bottom: 8px;
}

.features__community-stats-wrapper__heading {
  color: var(--feature-title-text-color);
  font-size: var(--font-size-h4);
  font-weight: 700;
  line-height: var(--line-height-h4);
  text-align: center;
}

.features__community-stats-wrapper__sub-heading {
  color: var(--feature-title-text-color);
  font-size: var(--font-size-h7);
  font-weight: 600;
  line-height: var(--line-height-h7-xs);
  text-align: center;
}

@media (max-width: 480px) {
  .features {
    max-width: 30rem;
    margin-top: 32px;
    margin-bottom: 60px
  }

  .features__heading {
    font-size: var(--font-size-h5);
    padding: 0 0 28px 59px;
    text-align: start;
  }

  .features__content {
    flex-direction: column;
    gap: 0;
  }

  .features__content:not(:last-child) {
    margin-bottom: 0px;
  }

  .features__content-wrapper {
    gap: 16px;
  }

  .features__content-wrapper-heading {
    font-size: var(--font-size-h7-mega);
    line-height: var(--font-size-h7-mega);
    padding-left: 59px;
  }

  .features__content-wrapper-description {
    padding-left: 59px;
    gap: 12px;
    max-width: 92%;
  }

  .features__content-wrapper-description-title {
    font-size: var(--font-size-h7);
    line-height: var(--line-height-h7);
  }

  .features__content-wrapper-description-list {
    font-size: var(--font-size-h8);
    line-height: var(--line-height-h8);
    padding-left: 18px;
  }

  .features__content-image {
    padding-right: 60px;
    margin-left: 58px;
    width: 90%;
    margin-top: 20px;
    margin-bottom: 40px;
  }

  .features__community-stats__text {
    font-size: var(--font-size-base);
    line-height: var(--line-height-base);
  }

  .features__community-stats-wrapper__heading {
    font-size: var(--font-size-h7);
    line-height: var(--line-height-h7);
  }

  .features__community-stats-wrapper__sub-heading {
    font-size: var(--font-size-h8-s);
    line-height: var(--line-height-h8);
    max-width: 60px;
  }

  .features__community-stats-container {
    justify-content: space-around;
  }

  .features__community-stats {
    gap: 18px;
    padding: 33px 0;
    margin-left: 50px;
    max-width: min(var(--layout-content-width), 85%);
  }

  .features__path {
    /* Changes required here */
    /* top: 7rem;
    right: 26rem; */
    display: none;
  }
}

/* Nightwatch Feature section end */

/* Nightwatch Capabilities section start */

.capabilities {
  margin-left: auto;
  margin-right: auto;
  max-width: min(var(--layout-content-width), 90%);
  width: 100%;
  margin-bottom: 200px;
  position: relative;
}

.capabilities__heading {
  color: var(--text-color);
  font-size: var(--font-size-h2);
  font-weight: 700;
  line-height: var(--line-height-h2);
  padding: 51px 182px;
  text-align: center;
}

.capabilities__heading--highlight {
  color: var(--text-color-accent);
}

.capabilities__heading--highlight::after {
  content: ' ';
}
/* ... */

